--- a/base/botones.css
+++ b/base/botones.css
@@ -20,10 +20,12 @@
     padding: 1.2em 1.6em;
     margin: 0 0 1rem 0;
     font-size: .8em;
+    font-weight: bold;
     background-color: #333;
     color: #FFFFFF;
     font-family: Roboto, sans-serif;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .boton:hover,
@@ -51,6 +53,5 @@
     */
     padding: 1rem;
     border-radius: 50%;
-    /*background-color: #333;*/
-    color: #ffffff;
+    color: #FFF;
 }
